--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+    height: 100vh;
+    min-height: 800px;
+    width: 100vw;
+    min-width: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(89, 0, 119);
+    background: linear-gradient(45deg, rgba(89, 0, 119, 1) 0%, rgba(76, 9, 121, 1) 35%, rgba(149, 0, 255, 1) 100%);
 }
