--- a/src/components/SongList.module.css
+++ b/src/components/SongList.module.css
@@ -1,15 +1,15 @@
-.song__list {
+.SongList {
     margin-bottom: 20px;
 }
 
-.song__description {
+.SongDescription {
     display: flex;
     padding: 10px 0;
     margin-bottom: 20px;
     border-bottom: 1px solid #444;
 }
 
-.song__description p {
+.SongDescription p {
     font-weight: bold;
     width: 150px;
     margin-right: 20px;
