--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -11,6 +12,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(89, 0, 119);
     background: linear-gradient(45deg, rgba(89, 0, 119, 1) 0%, rgba(76, 9, 121, 1) 35%, rgba(149, 0, 255, 1) 100%);
 }
